css/contact/desktop.css
@import url(../colors.css);

.input-prompt {
    color: var(--color-black);
    font-size: 0.85em;
    transition: all 200ms;
}

.text-item {
    background: none;
    height: 25px;
    width: clamp(5px, 90%, 300px);
    border-bottom: 2.5px solid var(--color-black);
    border-top: none;
    border-right: none;
    border-left: none;
    color: var(--color-black);
    transition: all 200ms;
}

.text-item:focus {
    background: none;
    outline: none;
    border-bottom: 2.5px solid var(--color-green);
    transition: all 200ms;
}

.text-item:focus ~ .input-prompt {
    color: var(--color-green);
    transition: all 200ms;
}

.big-input {
    margin-top: 10px;
    resize: none;
    font-family: "Inter", sans-serif !important;
    font-size: 0.7em;
    background: none;
    height: 25px;
    width: 95.3%;
    border-bottom: 2.5px solid var(--color-black);
    border-top: none;
    border-right: none;
    border-left: none;
    color: var(--color-black);
    transition: all 200ms;
}

.big-input:focus {
    background: none;
    outline: none;
    border-bottom: 2.5px solid var(--color-green);
    transition: all 200ms;
}

.big-input:focus ~ .input-prompt {
    color: var(--color-green);
    transition: all 200ms;
}

.big-input:focus::placeholder {
    color: transparent;
}

.text-field {
    width: 100%;
    display: flex;
    flex-direction: column-reverse;
}

#contact {
    display: flex;
    align-items: center;
    flex-direction: column;
    column-gap: 10px;
}

.contact-intro {
    text-align: center;
    margin-bottom: 30px;
}

.contact-title {
    margin-bottom: 5px;
    font-size: 2em;
    font-weight: 700;
}

.contact-context {
    font-weight: 500;
}

.field-group {
    display: flex;
    width: clamp(450px, 40vw, 800px);
    padding-bottom: 25px;
    justify-content: space-between;
}

.contact-content {
    height: 400px;
    width: clamp(800px, 90vw, 1250px);
    border-radius: 15px;
    box-shadow: 0px 0px 25px var(--color-black-shadows);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.contact-links {
    width: clamp(1px, 40%, 450px);
    height: 92.5%;
    background-color: var(--color-green);
    color: white;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.large-text {
    margin-top: 10px;
    font-size: 1.5em;
    font-weight: 600;
}

.large-text, .contact-time {
    max-width: 250px;
}

.contact-time {
    margin-top: 15px;
    font-size: 0.85em;
}

.contact-form {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: auto;
}

.contact-info {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.contact-icon {
    width: 24px;
    height: 24px;
    transition: all 100ms;
}

.actual-link {
    width: 24px;
    height: 24px;
}

.actual-link:hover > .contact-icon {
    width: 20px;
    height: 20px;
    transition: all 100ms;
}

.contact-icons {
    margin-top: 20px;
    width: 200px;
    display: flex;
    justify-content: space-evenly;
}

.contact-info-container {
    height: 200px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: flex-start;
}

.info-icon {
    margin-right: 10px;
}

.send-button {
    margin-top: 25px;
    width: 100px;
    height: 40px;
    color: white;
    font-family: "Inter", sans-serif !important;
    background-color: var(--color-green);
    font-size: 0.75em !important;
    border: none;
    border-radius: 7.5px;
}

.send-button:hover {
    box-shadow: 2px 5px 10px var(--color-green-shadows);
    transition: all 300ms;
}

.button-container {
    align-self: flex-end;
    margin-right: 4%;
}

